# machine-learning-workshop

./: pyproject.toml  workshop.ipynb
