[tool.poetry]
name = "machine-learning-workshop"
version = "0.1.0"
description = ""
authors = ["Franciszek Madej <franek@alergeek.ventures>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
ipykernel = "^6.25.2"
pandas = "^2.1.1"
plotly = "^5.17.0"
nbformat = "^5.9.2"
scikit-learn = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
